--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "mini-for-2": "node --watch ./nd/9-mini-for-2.js",
     "mini-for": "node --watch ./nd/8-mini-for.js",
     "for": "node --watch ./nd/7-for.js",
     "function": "node --watch ./nd/6-mini-function.js",
