--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "raides": "node --watch ./nd/11-raides.js",
+    "atvirukai": "node --watch ./nd/10-atvirukai.js",
     "mini-for-2": "node --watch ./nd/9-mini-for-2.js",
     "mini-for": "node --watch ./nd/8-mini-for.js",
     "for": "node --watch ./nd/7-for.js",
