--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "uzduotys": "node --watch ./nd/15-uzduotys-04-10.js",
     "mini": "node --watch ./nd/14-mini.js",
     "miestai": "node --watch ./nd/13-miestai.js",
     "temperaturos": "node --watch ./nd/12-temperaturos.js",
